--- a/bootstrap/styles.css
+++ b/bootstrap/styles.css
@@ -10,20 +10,27 @@
   
   .navbar{
     background-color:none;
-  
   }
   
   .yayaya {
     background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(https://humanidades.com/wp-content/uploads/2017/03/selva-4-e1564611988457.jpg);
-    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 2%;
   }
   
   .CarouselSI {
     padding: 5%;
   }
   
-  .navbar-brand {
-    
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: white;
+  .nav-brand {
+    color:rgb(212, 207, 133);
+    text-decoration: none;
   }
+
+  .nav-cat {
+    color:brown;
+    text-decoration: none;
+  }
+
