--- a/bootstrap/styles.css
+++ b/bootstrap/styles.css
@@ -2,9 +2,9 @@
 .centreo {
     text-align: center;
     padding: 1%;
-    color:crimson;
+    color:rgb(212, 207, 133);
     -webkit-text-stroke-width: 0.2px;
-    -webkit-text-stroke-color: white;
+    -webkit-text-stroke-color: black;
     font-family: "Rubik Bubbles", serif;
   }
   
@@ -30,7 +30,7 @@
   }
 
   .nav-cat {
-    color:brown;
+    color:rgb(212, 207, 133);
     text-decoration: none;
   }
 
